--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -14,24 +14,29 @@
 </head>
 
 <body>
-
-    <div class="container mt-5 mx-auto" >
-        <div id="content" class="container bg-secondary w-25 rounded-4 " >
-            <div >
-                <h1 class="text-center">Login</h1 >
-                <br>
-                <label for="cname">Nome completo</label><br>
-                <input type="text" id="cname" name="cname"><br>
-                <label for="cemail">E-mail</label><br>
-                <input type="email" id="cemail" name="cemail"><br>
-                <label for="cnum">Idade</label><br>
-                <input type="number" id="cnum" name="cnum" min="0"><br>
-                <label for="cpass">Senha</label><br>
-                <input type="password" id="cpass" name="cpass"><br><br>
-                <input type="submit" value="enviar" id="enviar"><br>
+    <div class="container-fluid bg-black text-white text-center">
+        <h1 class="p-3 shadow-lg p-3 mb-4 light ">Cadastro do cliente</h1> 
+    </div>
+        <div class="container mx-auto">
+            <div id="content" class="container bg-secondary w-25 rounded-4 mt-5" >
+                <div class="text-white m-2 p-2">
+                    <h1 class="text-center">Login</h1 >
+                    <br>
+                    <label for="cname">Nome completo</label><br>
+                    <input  class="w-100" type="text" id="cname" name="cname"><br>
+                    <label for="cemail">E-mail</label><br>
+                    <input class="w-100" type="email" id="cemail" name="cemail"><br>
+                    <label for="cpass">Senha</label><br>
+                    <input type="password" id="cpass" name="cpass" ><br>
+                    <label for="cnum">Idade</label><br>
+                    <input class="w-25" type="number" id="cnum" name="cnum" min="0"><br>
+                    <input type="submit" value="Enviar" id="enviar" class="mt-2 btn btn-outline-light"><br>
+                    <a class="text-white p-2 m-2" href="#">Esqueceu a senha?</a>
+                </div>
             </div>
         </div>
-    </div>
+
+    <div class="container-fluid bg-black text-white text-center bottom-0 position-absolute shadow-lg p-3 mt-5 light ">Created by Anna e João</div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
